# rdevin

./: Cargo.toml  README.md  flake.nix
examples/: channel.rs  codes_conv.rs  display.rs  grab.rs  keyboard_state.rs  keycode.rs  listen.rs  serialize.rs  simulate.rs  test.rs  tokio_channel.rs
src/: codes_conv.rs  lib.rs  rdev.rs  rdevin.rs  redev.rs
src/keycodes/: android.rs  chrome.rs  linux.rs  macos.rs  mod.rs  usb_hid.rs  windows.rs
src/linux/: common.rs  display.rs  grab.rs  keyboard.rs  listen.rs  mod.rs  simulate.rs
src/macos/: common.rs  display.rs  grab.rs  keyboard.rs  keycodes.rs  listen.rs  mod.rs  simulate.rs
src/windows/: common.rs  display.rs  grab.rs  keyboard.rs  listen.rs  mod.rs  simulate.rs
tests/: grab.rs  keycode.rs  listen_and_simulate.rs
